# databricks-watchdog

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  capabilities.yaml  pyproject.toml
.claude/: settings.json
caps/: gate.py  initializer.py  manifest.py  review.py
ctk/: assertions.py  lint.py  runners.py  verify.py
docs/: README.md  architecture-guide.md  deployment-playbook.md  governance-hub-integration-plan.md  governance-hub-prd-comparison.md  guardrails-demo.html  remediation-agents-prd.md  roadmap.md
engine/: databricks.yml  hub_contract.yml  setup.py
guardrails/: app.yaml  databricks.yml  requirements.txt  setup.py
mcp/: app.yaml  databricks.yml  requirements.txt  setup.py
ontos-adapter/: README.md  pyproject.toml
ontos-adapter/frontend/: README.md
ontos-adapter/frontend/src/: routes.watchdog.tsx
ontos-adapter/frontend/src/components/: ProposalDiff.tsx
ontos-adapter/frontend/src/config/: features.watchdog.ts
ontos-adapter/frontend/src/i18n/en/: watchdog.json
ontos-adapter/frontend/src/views/: Exceptions.tsx  GovernanceDashboard.tsx  Policies.tsx  RemediationDashboard.tsx  RemediationInbox.tsx  ResourceDetail.tsx
ontos-adapter/src/watchdog_governance/: __init__.py  app.py  models.py  ontology_export.py  ontos_sync.py  provider.py  router.py
ontos-adapter/src/watchdog_governance/providers/: __init__.py  watchdog.py
ontos-adapter/src/watchdog_governance/routers/: _deps.py  exceptions.py  grants.py  ontology.py  policies.py  remediation.py  violations.py
scripts/: README.md  __init__.py  _merge_pack.py  (+6 more)
(+311 files in other folders)
